<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".AboutDeveloper">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="15dp"
               android:layout_marginTop="5dp"
               android:layout_marginEnd="15dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/red_border"
               app:cardCornerRadius="30dp"
               app:cardElevation="20dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   android:gravity="center"
                   android:orientation="vertical">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Mr. R.K. Sharma"
                       android:fontFamily="@font/aladin"
                       android:textSize="30sp"
                       android:textColor="@color/tit" />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Sports Officer"
                       android:fontFamily="@font/aladin"
                       android:textStyle="bold"
                       android:textSize="20sp"
                       android:textColor="@color/tit" />
               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/red_border"
               android:backgroundTint="@color/white"
               app:cardCornerRadius="30dp"
               app:cardElevation="20dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:background="@color/white">

                   <com.makeramen.roundedimageview.RoundedImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_margin="10dp"
                       android:adjustViewBounds="true"
                       android:src="@drawable/sharmasir"
                       app:riv_corner_radius="8dp" />
               </LinearLayout>
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"
           android:layout_marginBottom="5dp"
           android:layout_marginTop="10dp"
           app:cardCornerRadius="20dp"
           app:cardElevation="20dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   android:orientation="vertical">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/aladin"
                       android:gravity="center"
                       android:text="@string/intro"
                       android:textColor="@color/tit"
                       android:textSize="20sp" />
               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="10dp"
               android:layout_marginTop="5dp"
               app:cardCornerRadius="20dp"
               app:cardElevation="20dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   android:paddingBottom="10dp"
                   android:orientation="vertical">
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:fontFamily="@font/aladin"
                           android:gravity="center"
                           android:text="Founders"
                           android:layout_marginStart="20dp"
                           android:textColor="@color/tit"
                           android:textSize="20sp"
                           android:textStyle="bold"/>
                   </LinearLayout>
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center">
                       <com.makeramen.roundedimageview.RoundedImageView
                           android:layout_width="wrap_content"
                           android:layout_height="180dp"
                           android:src="@drawable/ankit"
                           android:layout_marginRight="20dp"
                           android:adjustViewBounds="true"
                           app:riv_corner_radius="8dp"/>
                       <com.makeramen.roundedimageview.RoundedImageView
                           android:layout_width="wrap_content"
                           android:layout_height="180dp"
                           android:src="@drawable/anand"
                           android:adjustViewBounds="true"
                           app:riv_corner_radius="8dp" />
                   </LinearLayout>
               </LinearLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
               android:layout_marginEnd="10dp"
               android:layout_marginBottom="5dp"
               android:background="@drawable/red_border"
               android:backgroundTint="@color/white"
               app:cardCornerRadius="30dp"
               app:cardElevation="20dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:text="@string/line4"
                   android:layout_margin="5dp"
                   android:textColor="@color/tit"
                   android:textSize="17sp" />
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:layout_marginBottom="10dp"
               android:layout_marginTop="5dp"
               app:cardCornerRadius="20dp"
               app:cardElevation="20dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingBottom="10dp"
                   android:background="@color/white"
                   android:orientation="vertical">
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:background="@color/white"
                       android:layout_height="wrap_content">
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:fontFamily="@font/aladin"
                           android:gravity="center"
                           android:text="Members"
                           android:layout_marginStart="20dp"
                           android:textColor="@color/tit"
                           android:textSize="20sp"
                           android:textStyle="bold"/>
                   </LinearLayout>
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="5dp"
                       android:background="@color/white"
                       android:gravity="center">
                       <com.makeramen.roundedimageview.RoundedImageView
                           android:layout_width="wrap_content"
                           android:layout_height="150dp"
                           android:src="@drawable/aman"
                           android:layout_marginRight="20dp"
                           android:adjustViewBounds="true"
                           app:riv_corner_radius="8dp"/>

                   </LinearLayout>
               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
               android:layout_marginEnd="10dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/red_border"
               android:backgroundTint="@color/white"
               app:cardCornerRadius="30dp"
               app:cardElevation="20dp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center_vertical"
                       android:padding="10sp"
                       android:text="@string/line1"
                       android:textColor="@color/tit"
                       android:textSize="15sp" />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center_vertical"
                       android:padding="10sp"
                       android:text="@string/line2"
                       android:textColor="@color/tit"
                       android:textSize="15sp" />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:gravity="center_vertical"
                       android:padding="10sp"
                       android:text="@string/line3"
                       android:textColor="@color/tit"
                       android:textSize="15sp" />
               </LinearLayout>
           </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
               android:layout_marginEnd="10dp"
               android:layout_marginBottom="5dp"
               android:background="@drawable/red_border"
               android:backgroundTint="@color/white"
               app:cardCornerRadius="30dp"
               app:cardElevation="20dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:padding="10dp"
                   android:orientation="vertical"
                   android:layout_gravity="center">
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:orientation="vertical">
                       <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:background="@color/white"
                           android:gravity="center"
                           android:text="Connect with us:"
                           android:textColor="@color/tit"
                           android:textSize="15sp"
                           android:textStyle="bold" />
                   </LinearLayout>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:padding="10dp"
                       android:background="@color/white"
                       android:gravity="center">
                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginEnd="25dp"
                           android:id="@+id/about_call"
                           android:src="@drawable/call"/>
                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/about_message"
                           android:layout_marginEnd="25dp"
                           android:src="@drawable/message"/>
                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginEnd="25dp"
                           android:id="@+id/about_email"
                           android:src="@drawable/email"/>
                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:id="@+id/about_whatsapp"
                           android:src="@drawable/whatsapp"/>
                   </LinearLayout>
               </LinearLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
               android:layout_marginEnd="10dp"
               android:layout_marginBottom="5dp"
               android:background="@drawable/red_border"
               android:backgroundTint="@color/white"
               app:cardCornerRadius="30dp"
               app:cardElevation="20dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/aladin"
                   android:gravity="center"
                   android:layout_margin="5dp"
                   android:text="@string/line5"
                   android:textColor="@color/tit"
                   android:textSize="17sp"
                   android:layout_marginBottom="10dp"/>
           </androidx.cardview.widget.CardView>



       </LinearLayout>
</ScrollView>